Checking Existence of Edge Length Limited Paths (DSU)

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,8 @@
         "*.csv": "csv",
         "*.jsx": "javascriptreact",
         "vector": "cpp",
-        "iosfwd": "cpp"
+        "iosfwd": "cpp",
+        "__hash_table": "cpp",
+        "unordered_map": "cpp"
     }
 }
